2022-09-19T08:29:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3080967459
* notice: last 14d: unq all: 9 34
* notice: prev accum: outdated-unq outdated-all / unq all: 594 2422 / 619 2461
* notice: next accum: outdated-unq outdated-all / unq all: 594 2422 / 615 2456
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -5 -6 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-05 2022-09-19]

2022-09-19T02:19:12Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3079525420
* notice: last 14d: unq all: 14 39
* notice: prev accum: outdated-unq outdated-all / unq all: 594 2422 / 619 2460
* notice: next accum: outdated-unq outdated-all / unq all: 594 2422 / 619 2461
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-18T16:27:19Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3077836997
* notice: last 14d: unq all: 14 38
* notice: prev accum: outdated-unq outdated-all / unq all: 594 2422 / 618 2458
* notice: next accum: outdated-unq outdated-all / unq all: 594 2422 / 619 2460
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2022-09-18]

2022-09-18T08:24:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3076438248
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2456
* notice: next accum: outdated-unq outdated-all / unq all: 594 2422 / 618 2458
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2022-09-04] / [2022-09-18]

2022-09-17T16:27:54Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3074022417
* notice: last 14d: unq all: 12 35