@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-19T08:29:57Z",
+  "timestamp" : "2022-09-19T16:29:23Z",
   "count_outdated" : 2422,
   "uniques_outdated" : 594,
-  "count" : 2456,
-  "uniques" : 615,
+  "count" : 2458,
+  "uniques" : 616,
   "clones" : [
     {
       "timestamp": "2022-09-05T00:00:00Z",
@@ -98,10 +98,10 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
