@@ -1,6 +1,6 @@
 {
-  "count": 34,
-  "uniques": 9,
+  "count": 36,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-09-05T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
